[gd_scene load_steps=8 format=3 uid="uid://br2ovdvigwsbw"]

[ext_resource type="Script" path="res://scripts/level_2.1.gd" id="1_rkcl6"]
[ext_resource type="Texture2D" uid="uid://bcl1vcauwrwbq" path="res://assets/circle.png" id="2_6et8j"]
[ext_resource type="Script" path="res://scripts/drag.gd" id="3_7hjbl"]
[ext_resource type="Theme" uid="uid://1d75db2kglin" path="res://assets/label.tres" id="4_ex1tr"]
[ext_resource type="Script" path="res://scripts/start_marker.gd" id="4_j8bbd"]
[ext_resource type="Script" path="res://scripts/end_marker.gd" id="5_d3kc0"]
[ext_resource type="Theme" uid="uid://ueuj5qbd8wqc" path="res://assets/Custom.tres" id="7_obhuj"]

[node name="Level2" type="Node2D"]
script = ExtResource("1_rkcl6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1210.0
offset_bottom = 716.0
color = Color(0.725849, 0.526176, 0.758985, 1)

[node name="CircleSprite" type="Sprite2D" parent="."]
position = Vector2(576, 289)
scale = Vector2(0.736, 0.736)
texture = ExtResource("2_6et8j")
script = ExtResource("3_7hjbl")

[node name="Center" type="Node2D" parent="CircleSprite"]
position = Vector2(-782.609, -434.783)
scale = Vector2(1.3587, 1.3587)

[node name="MajorArc" type="Polygon2D" parent="."]

[node name="MinorArc" type="Polygon2D" parent="."]

[node name="Markers" type="Node2D" parent="."]
position = Vector2(0, -31)

[node name="StartMarker" type="Marker2D" parent="Markers"]
position = Vector2(444, 401)
script = ExtResource("4_j8bbd")

[node name="ColorRect" type="ColorRect" parent="Markers/StartMarker"]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(0, 0.895728, 0.449452, 1)

[node name="EndMarker" type="Marker2D" parent="Markers"]
position = Vector2(553, 167)
script = ExtResource("5_d3kc0")

[node name="ColorRect" type="ColorRect" parent="Markers/EndMarker"]
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(0.98289, 0, 0.00691947, 1)

[node name="UI" type="CanvasLayer" parent="."]

[node name="FormulaLabel" type="Label" parent="UI"]
offset_left = 463.0
offset_top = 550.0
offset_right = 702.0
offset_bottom = 614.0
theme = ExtResource("4_ex1tr")
horizontal_alignment = 1
autowrap_mode = 2

[node name="FeedbackLabel" type="Label" parent="UI"]
offset_left = 70.0
offset_top = 553.0
offset_right = 308.0
offset_bottom = 612.0
theme = ExtResource("4_ex1tr")

[node name="ConfirmButton" type="Button" parent="UI"]
offset_left = 851.0
offset_top = 553.0
offset_right = 1071.0
offset_bottom = 615.0
theme = ExtResource("4_ex1tr")
text = "Confirm"

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 889.0
offset_top = 241.0
offset_right = 1109.0
offset_bottom = 355.0
theme = ExtResource("7_obhuj")

[node name="GridContainer" type="GridContainer" parent="PanelContainer"]
layout_mode = 2
columns = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 1, 0.3)

[node name="Major_arc" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Major Arc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 0, 0, 0.3)

[node name="Minor_arc" type="Label" parent="PanelContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Minor Arc
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Button" parent="."]
offset_left = 1004.0
offset_top = 16.0
offset_right = 1127.0
offset_bottom = 72.0
theme = ExtResource("4_ex1tr")
text = "Next -->"

[connection signal="pressed" from="UI/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
